feat: added prompts to get user and email for git refactor: renamed git template

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,3 @@
-[user]
-  name = "Adam Newell"
-	email = adamdouglasnewell@gmail.com
-
 [alias]
   # Show verbose output about tags, branches or remotes
   tags = tag -l
@@ -9,3 +5,8 @@
   remotes = remote -v
   # Pretty log output
   hist = log --graph --pretty=format:‘%Cred%h%Creset %s%C(yellow)%d%Creset %Cgreen(%cr)%Creset [%an]’ --abbrev-commit --date=relative
+
+[commit]
+        template = /Users/$(whoami)/.git_commit.txt
+[core]
+        editor = vim -v +16 +startinsert
